if no new cell exists, create hidden broadcaster cell, fdo#51368

Change-Id: I61b96a0e164269ef85778cba7865d6488ebac79d